--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,8 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="utf-8">
-  <title>Vino 2</title>
+  <title>Vino</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -11,8 +12,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
 </body>
-</html>
 
+</html>
